# plant-mesh

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  GEO_SPEC.md  LICENSE  README.md  ROADMAP.md  demo.py  index.html  mise.toml  post_process_images.sh  pyproject.toml  rapport.typ
.devcontainer/: devcontainer.json
.github/workflows/: build_page.yml
.zed/: settings.json
__marimo__/session/: demo.py.json
assets/: custom_phase_item.wgsl  shader.wgsl  tree_config.toml
bevy_gizmos/: .cargo_vcs_info.json
bevy_gizmos/src/: lib.rs  pipeline_3d.rs  view.rs
bevy_pbr/: .cargo_vcs_info.json  Cargo.toml
bevy_pbr/src/render/: mesh.rs  mesh_view_bindings.rs
bevy_simple_graphics/src/: lib.rs
crates/bevy-demo/: Cargo.toml  index.html
crates/bevy-demo/src/: bevy_mesh.rs  lib.rs  main.rs
crates/bevy-gizmos/src/: lib.rs  view.rs
crates/bevy-simple-graphics/src/: lib.rs
crates/bevy_simple_graphics/: Cargo.toml
crates/plant-core/: Cargo.toml
crates/plant-core/src/: lib.rs  utils.rs
crates/plant-core/src/growing/: generation.rs  mod.rs
crates/plant-core/src/meshing/: algorithms.rs  mesh_builder.rs  mod.rs  particles.rs
crates/tubulin-core/: Cargo.toml
crates/tubulin-core/src/: export.rs  lib.rs  python.rs  utils.rs
crates/tubulin-core/src/growing/: generation.rs  mod.rs
crates/tubulin-core/src/meshing/: algorithms.rs  mesh_builder.rs  mod.rs  particles.rs
docs/: report.typ
examples/: convex_hull.rs  export_gltf.rs  particles.rs
js/: DEVELOP.md  index.html
js/src/: decoder.js  generate.js  render.js
python/tests/: test_debug_module.py
python/tubulin/: __init__.py  debug.py  render.js
python/tubulin/viewer/: decoder.js  geometry.json  render.js
src/: bevy_mesh.rs  experiments.rs  lib.rs  main.rs  tools.rs
src/growing/: generation.rs  mod.rs  simple_generation.rs
src/meshing/: algorithms.rs  mesh_builder.rs  meshing.rs  mod.rs  particles.rs
src/shader/: custom_phase.rs  mod.rs  mod_old.rs  shader.wgsl
