[package]
name = "rust-geometry"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version="0.15.1", default-features=false, features=[
    #"bevy_gizmos",
    #"bevy_sprite",
    "bevy_render",
    "bevy_window",
    "x11",
    "webgl2",
    "bevy_core_pipeline",
]}
bevy_render = "0.15.1"
bevy_sprite = "0.15.1"
bevy_gizmos = {path="./bevy_gizmos", features=["bevy_render", "webgl"]}
rand = "0.8.5"
smallvec = "1.13.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
