[package]
name = "plant-mesh"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", default-features = false, features = ["bevy_render", "bevy_window", "x11", "webgl2", "bevy_core_pipeline", "bevy_asset", "dynamic_linking"] }
bevy_render = "0.15.1"
bevy_gizmos = {path="crates/bevy_gizmos", features=["bevy_render", "webgl"]}
bevy_simple_graphics = {path="crates/bevy_simple_graphics"}
plant-core = { path = "crates/plant-core", features = ["bevy"] }
rand = "0.8.5"
smallvec = "1.13.2"
toml = "0.8.20"
serde = "1.0"
mesh-tools = "0.4.0"
base64 = "0.22.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "crates/bevy_gizmos",
    "crates/bevy_simple_graphics",
    "crates/plant-core"
]
