[workspace]
members = [
    "crates/tubulin-core",
    "crates/bevy-demo",
    "crates/bevy-gizmos",
    "crates/bevy-simple-graphics",
]
resolver = "2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
