[project]
name = "tubulin"
version = "0.1.0"
description = "Procedural plant mesh generator"
readme = "README.md"
authors = [
    { name = "Antonin P", email = "antonin.peronnet@telecom-paris.fr" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.1",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/tubulin-core/Cargo.toml"
python-source = "python"
module-name = "tubulin._tubulin"
editable-profile = "release"
features = ["python"]

[dependency-groups]
dev = [
    "marimo>=0.20.4",
]
