[package]
name = "plant-core"
version = "0.1.0"
edition = "2021"

[dependencies]
glam = { version = "0.29", features = ["serde"] }
mesh-tools = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.13", features = ["serde"] }
rand = "0.8"
bevy_gizmos = { path = "../../bevy_gizmos", optional = true, features = ["bevy_render"] }
bevy = { version = "0.15.1", default-features = false, optional = true, features = ["bevy_render", "bevy_asset", "bevy_color"] }
bevy_color = { version = "0.15.2", optional = true }
bevy_math = { version = "0.15.1", optional = true }

[features]
default = []
bevy = ["dep:bevy", "dep:bevy_gizmos", "dep:bevy_color", "dep:bevy_math"]
