[package]
name = "tubulin-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "tubulin_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib", "lib"]

[dependencies]
glam = { version = "0.29", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.4"
smallvec = { version = "1.13", features = ["serde"] }
rand = "0.8"
bevy_gizmos = { path = "../bevy-gizmos", optional = true, features = ["bevy_render"] }

bevy = { version = "0.15.1", default-features = false, optional = true, features = ["bevy_render", "bevy_asset", "bevy_color"] }
bevy_color = { version = "0.15.2", optional = true }
bevy_math = { version = "0.15.1", optional = true }
pyo3 = { version = "0.27.0", features = ["abi3"], optional=true }
hashbrown = { version = "0.16.1", optional=true }
numpy = {version="0.27", optional=true}
ndarray = {version="0.17.2", optional=true}
toml = "0.9.11"

[features]
default = []
bevy = ["dep:bevy", "dep:bevy_gizmos", "dep:bevy_color", "dep:bevy_math"]
python = ["dep:pyo3", "dep:hashbrown", "dep:numpy", "dep:ndarray"]
